--- a/startseite.scss
+++ b/startseite.scss
@@ -160,3 +160,9 @@ body[data-page-id="68"] {
         color: var(--wcfSidebarHeadlineText) !important;
     }
 }
+
+@include screen-md-down {
+    .contentHeader .contentHeaderTitle {
+        margin-top: 30px !important;
+    }
+}
