--- a/own-messageSidebar.scss
+++ b/own-messageSidebar.scss
@@ -85,6 +85,7 @@
 .demo-hueter {
     background: #fafafa !important;
     width: 210px !important;
+    border: 1px solid #3579be !important;
     border-bottom-width: 30px !important;
 	&::after {
 		font-weight: bold;
