main: bugfix: demo-sensenmann

--- a/own-messageSidebar.scss
+++ b/own-messageSidebar.scss
@@ -161,6 +161,6 @@
     }
 }
 
-.demo-hueter, .demo-gelehrter, demo-sensenmann {
+.demo-hueter, .demo-gelehrter, .demo-sensenmann {
     border-radius: 8px !important; 
 }
