--- a/own-badges.scss
+++ b/own-badges.scss
@@ -1,21 +1,4 @@
-.messageSidebar:not(.userOnlineGroupMarking6 .messageSidebar) {
-	text-align: left !important;
-	&::before {
-		display: none;
-	}	
-}
-
-.messageSidebar {
-	.messageAuthorBackground {
-		border-radius: 6px 6px 0 0;
-	}
-	
-    .badgeOnline::before {
-        left: 32px !important;
-        top: 2px !important;
-    }
-}
-
+@include screen-lg {
 .messageSidebar, .userMenu, .userList .box48, .box[data-box-identifier="com.woltlab.wcf.SignedInAs"], .box[data-box-identifier="com.woltlab.wcf.StaffOnline"], #tpl_wcf_user, #tpl_wcf_helpArticle {
     .messageAuthorContainer:not(:last-child) {
         margin-bottom: 0;	
@@ -69,4 +52,5 @@
                 }
         }
     }
+}
 }
