--- a/own-messageSidebar.scss
+++ b/own-messageSidebar.scss
@@ -7,6 +7,13 @@
     }
 }
 
+.messageSidebar:not(.demo-hueter, .demo-gelehrter, .demo-sensenmann) {
+    .messageSidebar .dataList {
+        border-top: 0 !important;
+        margin: -10px !important;
+    }
+}
+
 @include screen-lg { 
     .userOnlineGroupMarking4 .messageSidebar {
         border: 3px solid #d64434 !important;
