main: ready for update

--- a/own-messageSidebar.scss
+++ b/own-messageSidebar.scss
@@ -7,9 +7,14 @@
     }
 }
 
-.messageSidebar:not(.demo-hueter, .demo-gelehrter, .demo-sensenmann) .dataList {
-    border-top: 0 !important;
-    margin: -10px !important;
+.messageSidebar:not(.demo-hueter, .demo-gelehrter, .demo-sensenmann) {
+    .dataList {
+        border-top: 0 !important;
+        margin: -10px !important;
+    }
+    .messageAuthor {
+        margin-top: 10px !important;
+    }
 }
 
 @include screen-lg { 
