--- a/own-messageSidebar.scss
+++ b/own-messageSidebar.scss
@@ -12,7 +12,7 @@
         border-top: 0 !important;
         margin: -10px !important;
     }
-    .messageAuthor {
+    .messageAuthor+* {
         margin-top: 10px !important;
     }
 }
