main: try for new version

--- a/own-messageSidebar.scss
+++ b/own-messageSidebar.scss
@@ -99,6 +99,10 @@
     .userOnlineGroupMarking4 .messageSidebar, .userOnlineGroupMarking9 .messageSidebar, .userOnlineGroupMarking10 .messageSidebar, .userOnlineGroupMarking11, .userOnlineGroupMarking12 .messageSidebar, .userOnlineGroupMarking17 .messageSidebar {
         border-radius: 8px 8px 0 0 !important;
     }
+
+    .userOnlineGroupMarking4 .messageSidebar {
+        background: #f20e0e !important;
+    }
 }
 
 .demo-hueter {
