--- a/own-messageSidebar.scss
+++ b/own-messageSidebar.scss
@@ -100,6 +100,12 @@
         border-radius: 8px 8px 0 0 !important;
     }
 
+    .messageSidebar {
+        .username, .messageAuthorContainer::before {
+            color: #fff !important;
+        }
+    }
+
     .userOnlineGroupMarking4 .messageSidebar {
         background: #f20e0e !important;
     }
