main: make mod ready

--- a/own-messageSidebar.scss
+++ b/own-messageSidebar.scss
@@ -68,7 +68,7 @@
          }   
     }
 
-    .userOnlineGroupMarking11 .messageSidebar{
+    .userOnlineGroupMarking11 .messageSidebar {
         border-radius: 8px;
         border: 1px solid #000 !important;
         border-bottom-width: 30px !important;
@@ -112,6 +112,10 @@
 
     .userOnlineGroupMarking4 .messageSidebar {
         background: #f20e0e !important;
+    }
+
+    .userOnlineGroupMarking17 .messageSidebar {
+        background: #6bbce4 !important;
     }
 }
 
