--- a/own-messageSidebar.scss
+++ b/own-messageSidebar.scss
@@ -98,13 +98,13 @@
 @include screen-md-down { 
     .userOnlineGroupMarking4 .messageSidebar, .userOnlineGroupMarking6 .messageSidebar, .userOnlineGroupMarking9 .messageSidebar, .userOnlineGroupMarking10 .messageSidebar, .userOnlineGroupMarking10 .messageSidebar, .userOnlineGroupMarking11, .userOnlineGroupMarking12 .messageSidebar, .userOnlineGroupMarking17 .messageSidebar {
         border-radius: 8px 8px 0 0 !important;
-    }
 
-    .messageSidebar {
         .username, .messageAuthorContainer::before {
             color: #fff !important;
         }
+    }
 
+    .messageSidebar {
         .userRank {
             display: none;
         }
@@ -119,7 +119,7 @@
     }
 
     .userOnlineGroupMarking9 .messageSidebar {
-		background: 1px solid #3579be !important;
+		background: #3579be !important;
     }
 
     .userOnlineGroupMarking10 .messageSidebar {
