main: next try for update

--- a/own-messageSidebar.scss
+++ b/own-messageSidebar.scss
@@ -13,7 +13,7 @@
 }
 
 @include screen-lg { 
-    .messageGroupStarter .messageSidebar .plain.dataList::before {
+    .messageSidebar .plain.dataList::before {
         display: none;
     }
 
