--- a/own-badges.scss
+++ b/own-badges.scss
@@ -13,7 +13,7 @@
     }
 
     @include screen-lg {
-        .badge:not(.badgeOnline, .jCoinsBadgeUpdate, .badge_sophia) {
+        .badge_user {
             color: #393939;
         }
    
@@ -59,7 +59,7 @@
     }
 
     @include screen-md-down {
-        .badge:not(.badgeOnline, .jCoinsBadgeUpdate, .badge_sophia .badge, .badge_user .badge) {
+        .badge_admin, .badge_mod, .badge_erzengel, .badge_clan-founder {
             color: #fff !important;
         }
     }
