main: ready for test

--- a/own-badges.scss
+++ b/own-badges.scss
@@ -3,7 +3,7 @@
         margin-bottom: 0;	
     }
 
-    .badge:not(.badgeOnline, .jCoinsBadgeUpdate) {
+    .badge:not(.badgeOnline, .jCoinsBadgeUpdate, .badge_sophia) {
         background: none !important;
         padding-left: 0 !important;
     }
