--- a/own-messageSidebar.scss
+++ b/own-messageSidebar.scss
@@ -105,6 +105,10 @@
         .userRank {
             display: none;
         }
+
+        .userTitleBadge {
+            color: #fff !important;
+        }
     }
 
     .userOnlineGroupMarking4 .messageSidebar {
