main: make ready for finish

--- a/own-badges.scss
+++ b/own-badges.scss
@@ -67,7 +67,7 @@
         }
 
         .badge_sophia {
-            color: blue !important;
+            background: #3579BD !important;
         }
     }
 }
