--- a/own-messageSidebar.scss
+++ b/own-messageSidebar.scss
@@ -39,7 +39,7 @@
         border-radius: 8px !important; 
         &::after {
             bottom: -23px;
-            content: "Huter";
+            content: "Hüter";
             height: 20px;
             left: 65%;
             position: absolute;
