main: make sophia ready for bunker and main page

--- a/sophia.scss
+++ b/sophia.scss
@@ -1,4 +1,5 @@
-body[itemid="https://the-supernatural.de/user/2-sophia/"] {
+body[itemid="https://the-supernatural.de/user/2-sophia/"], 
+body[itemid="https://bunker.the-supernatural.de/user/2-sophia/"] {
 	.contentHeaderDescription, .contentInteraction, .tabMenu, .content .sectionTitle, .content .userTitleBadge {
 		display: none !important;
 	}
