--- a/startseite.scss
+++ b/startseite.scss
@@ -127,7 +127,8 @@ body[data-page-id="68"] {
 	}    
 }
 
-.beliebste-db-eintraege, .startseite-datenbank-aktuelle-eintraege {
+@media only screen and (min-width: 1200px) and (max-width: 1920px) and (min-height: 600px) and (max-height: 1080px) {
+.beliebste-db-eintraege {
     background: #efefef !important;
     padding: 30px !important;
     border-radius: 12px;
@@ -139,6 +140,21 @@ body[data-page-id="68"] {
           border-radius: 8px;
          margin: -10px -15px 0px;
           font-weight: 500;
+    }
+}
+}
+
+
+.beliebste-db-eintraege {
+    background: #fff !important;
+    padding: 16px !important;
+            
+    .boxTitle, .boxTitle a, .boxTitle a:hover {
+        color: #fff !important;
+    }
+        
+    .boxContent {
+        padding: 0 16px !important;
     }
 }
 
