--- a/own-accordion.scss
+++ b/own-accordion.scss
@@ -9,7 +9,7 @@
 			color: #fff !important;
 		}
 		
-		.boxContent:not(.beliebste-db-eintraege .boxContent) {
+		.boxContent:not {
 			padding: 0 16px !important;
 		}
 		
