--- a/startseite.scss
+++ b/startseite.scss
@@ -172,7 +172,7 @@ body[data-page-id="68"] {
     }
         
     .boxContent {
-        padding: 0 16px !important;
+        padding: 0 !important;
     }
 }
 }
