--- a/sonstiges.scss
+++ b/sonstiges.scss
@@ -1,3 +1,10 @@
+#tpl_wcf_team {
+	.inlineDataList {
+		padding-top: 20px !important;
+		margin-top: 15px !important;
+	}
+}
+
 #tpl_wcf_user .userProfileUser, .userMenu, #tpl_wcf_usersOnlineList {
 	.badge_admin {
 		background: none !important;
