--- a/support-area.scss
+++ b/support-area.scss
@@ -167,4 +167,10 @@
 	.badge_admin, .badge_mod, .badge_erzengel {
 		font-size: 12px !important;
 	}
+
+	.legende-rang {
+		margin: 0 !important;
+		border-radius: 12px;
+		background: #fff !important;
+	}
 }
