--- a/sonstiges.scss
+++ b/sonstiges.scss
@@ -5,6 +5,14 @@
 	}
 }
 
+#tpl_wbb_thread {
+	.wbbStickyIcon {
+		right: 1px !important;
+        top: 1px !important;
+	}
+}
+
+
 #tpl_wcf_user .userProfileUser, .userMenu, #tpl_wcf_usersOnlineList {
 	.badge_admin {
 		background: none !important;
