--- a/sophia.scss
+++ b/sophia.scss
@@ -1,5 +1,5 @@
 body[itemid="https://the-supernatural.de/user/2-sophia/"], 
-body[itemid="https://bunker.the-supernatural.de/user/2-sophia/"]
+body[itemid="https://bunker.the-supernatural.de/user/2-sophia/"],
 body[itemid="https://development.gentlemantis.de/5-5/user/2-sophia/"] {
 	.contentHeaderDescription, .contentInteraction, .tabMenu, .content .sectionTitle, .content .userTitleBadge {
 		display: none !important;
