--- a/own-messageSidebar.scss
+++ b/own-messageSidebar.scss
@@ -56,7 +56,7 @@
 
     .userOnlineGroupMarking10 .messageSidebar {
         border-radius: 8px !important;
-        border: 1px solid #f20e0e !important;
+        border: 1px solid #27ae60 !important;
         border-bottom-width: 30px !important;
         &::after {
             font-weight: bold;
@@ -173,7 +173,7 @@
 .demo-gelehrter {
     background: #fafafa !important;
 	width: 210px !important;
-    border: 1px solid #f20e0e !important;
+    border: 1px solid #27ae60 !important;
     border-bottom-width: 30px !important;
     .plain.dataList::before {
     	font-size: 17px;
