--- a/own-messageSidebar.scss
+++ b/own-messageSidebar.scss
@@ -128,7 +128,7 @@
     }
 
     .userOnlineGroupMarking10 .messageSidebar {
-        background:#f20e0e !important;
+        background:#27ae60 !important;
     }
 
     .userOnlineGroupMarking11 .messageSidebar {
