--- a/own-quiz.scss
+++ b/own-quiz.scss
@@ -1,12 +1,11 @@
 #tpl_wcf_quiz {
-	
 	.section {
 		border-radius: 12px;
 		padding: 8px !important;
 
-		section {
+		.section {
 			background: #efefef !important;
-			padding: 30px 30px 15px 30px !important;
+			padding: 30px 30px 30px 30px !important;
 		}
 		
 		.sectionTitle {
@@ -44,5 +43,14 @@
 		.section {
 			padding: 0 !important;
 		}
+	}
+
+	.dialogContent .sectionTitle {
+		margin: 0 7px 20px 7px !important;
+		text-align: center;
+	}
+		
+	#quizTitle {
+		display: none;
 	}
 }
