--- a/own-quiz.scss
+++ b/own-quiz.scss
@@ -3,9 +3,9 @@
 		border-radius: 12px;
 		padding: 8px !important;
 
-		.section {
+		section {
 			background: #efefef !important;
-			padding: 30px 30px 30px 30px !important;
+		//	padding: 15px 30px !important;
 		}
 		
 		.sectionTitle {
