--- a/own-quiz.scss
+++ b/own-quiz.scss
@@ -1,7 +1,7 @@
 #tpl_wcf_quiz {
 	.section {
 		border-radius: 12px;
-		padding: 8px !important;
+		// padding: 8px !important;
 
 		section {
 			background: #efefef !important;
