--- a/own-quiz.scss
+++ b/own-quiz.scss
@@ -1,11 +1,10 @@
 #tpl_wcf_quiz {
 	.section {
 		border-radius: 12px;
-		padding: 15px 30px !important;
 
 		section {
 			background: #efefef !important;
-		//	padding: 15px 30px !important;
+			padding: 30px !important;
 		}
 		
 		.sectionTitle {
