--- a/own-badges.scss
+++ b/own-badges.scss
@@ -2,7 +2,7 @@
     margin-bottom: 0;	
 }
 
-.badge:not(.badgeOnline, .jCoinsBadgeUpdate, .badgeUpdate, .forceOpen .badge, .badge_sophia) {
+.badge:not(.badgeOnline, .jCoinsBadgeUpdate, .badgeUpdate, .boxMenu .badge, .badge_sophia) {
     background: none !important;
     padding-left: 0 !important;
 }
