--- a/own-db.scss
+++ b/own-db.scss
@@ -63,6 +63,10 @@
 			padding: 10px 16px 15px;
 			border-radius: 5px;
 		}
+
+		.boxesSidebarRight .boxTitle {
+			color: #fff !important;
+		}
 	}
 	
 	.containerListFilterOptions button {
