--- a/own-db.scss
+++ b/own-db.scss
@@ -139,8 +139,10 @@
 	border-bottom: 0 !important;
 }
 
+
+
 .tabularBox.lexiconCategoryList {
-	background: none !important;
+//	background: none !important;
 	padding: 0 !important;
 	border-radius: 0 !important;
 }
