--- a/own-db.scss
+++ b/own-db.scss
@@ -143,8 +143,8 @@
 
 .tabularBox.lexiconCategoryList {
 //	background: none !important;
-	padding: 0 !important;
-	border-radius: 0 !important;
+//	padding: 0 !important;
+//	border-radius: 0 !important;
 }
 
 .lexiconAlphabetNavigation {
