--- a/own-db.scss
+++ b/own-db.scss
@@ -160,9 +160,9 @@
 }
 
 .lexiconMainCategory {
-	padding: 16px;
-	background: #efefef;
-	border-radius: 12px;
+	// padding: 16px;
+	// background: #efefef;
+	// border-radius: 12px;
 }
 
 }
