--- a/sophia.scss
+++ b/sophia.scss
@@ -14,6 +14,10 @@ body[itemid="https://bunker.the-supernatural.de/user/2-sophia/"] {
 			border-top-right-radius: 12px !important;
 		}
 	}
+
+	#about.tabMenuContent {
+		border-radius: 0 !important;
+	}
 		
 	.content .button {
 		display: none;
