--- a/sophia.scss
+++ b/sophia.scss
@@ -16,7 +16,7 @@ body[itemid="https://bunker.the-supernatural.de/user/2-sophia/"] {
 	}
 
 	#about.tabMenuContent {
-		border-radius: 0 !important;
+		border-radius: 0 0 12px 12px !important;
 	}
 		
 	.content .button {
