--- a/sophia.scss
+++ b/sophia.scss
@@ -18,7 +18,11 @@ body[itemid="https://bunker.the-supernatural.de/user/2-sophia/"] {
 	#about.tabMenuContent {
 		border-radius: 0 0 12px 12px !important;
 	}
-		
+	
+	.contentTitle {
+		visibility: hidden;
+	}
+	
 	.content .button {
 		display: none;
 	}
